--- a/less/all.less
+++ b/less/all.less
@@ -3,7 +3,8 @@
 @import './globals.less';
 @import './commons.less';
 @import './main.less';
-@import './todo_list.less';
+@import 'mockups_a/todo_list.less';
+@import 'mockups_a/e_store_a.less';
 /*@import './bootGrids.less';*/
 @import './bootstrap_h.less';
 //
