--- a/less/mockups_a/e_store_a.less
+++ b/less/mockups_a/e_store_a.less
@@ -1,4 +1,36 @@
 
 .e-store-a-content{
     min-height: 80vh;
+
+    .min-height-content{
+        min-height: 80vh;
+    }
+
+    .container{
+        width: 95%;
+    }
+
+    .btn{
+       float: right;
+       margin-right: 10px;
+    }
+
+}
+
+.page-header{
+
+    .btn{
+        position: absolute;
+        right: 10px;
+        top: 10px;
+    }
+}
+
+
+@media (max-width:@MD){
+
+}
+
+@media (max-width:@XS){
+
 }
