--- a/less/bootstrap_h.less
+++ b/less/bootstrap_h.less
@@ -36,6 +36,19 @@
     transform: translateY(-50%);
 }
 
+
+.third-percent{
+   height: 33.33333333%;
+}
+
+.third-percent-min{
+   min-height: 33.33333333vh;
+}
+
+.whole-percent{
+    height: 100%;
+}
+
 //==============================================================================
 
 .col-xs-1,.col-xs-2,.col-xs-3,.col-xs-4,.col-xs-5,.col-xs-6,.col-xs-7,.col-xs-8,.col-xs-9,.col-xs-10,.col-xs-11,.col-xs-12{
@@ -89,6 +102,3 @@
 }
 //==============================================================================
 
-.third-percent{
-   height: 30%;
-}
