--- a/less/mockups_a/e_store_a.less
+++ b/less/mockups_a/e_store_a.less
@@ -11,8 +11,27 @@
     }
 
     .btn{
-       float: right;
-       margin-right: 10px;
+        float: right;
+        margin-right: 10px;
+    }
+
+    .sidebar-entry{
+        width: 100%;
+        height: 35px;
+        background-color: lightgray;
+        margin-top: 10px;
+        padding: 5px;
+    }
+
+    //SPECIAL-OFFERS-CAROUSEL
+    #special-offers{
+        .carousel-inner{
+            .item img{
+                margin: auto;
+                margin-top:50px;
+                height: 80%;
+            }
+        }
     }
 
 }
@@ -25,6 +44,29 @@
         top: 10px;
     }
 }
+
+.controls{
+    width: 95%;
+    margin: auto;
+    height: 10vh;
+    /*background-color: lightgray;*/
+    margin-top: 10px;
+
+    .input-group{
+        float: left;
+        width: 50%;
+    }
+
+    .btn-default{
+        float: right;
+        margin-left: 10px;
+    }
+}
+
+
+
+
+
 
 
 @media (max-width:@MD){
