--- a/less/mockups_a/e_store_a.less
+++ b/less/mockups_a/e_store_a.less
@@ -34,6 +34,11 @@
         }
     }
 
+    .product-page{
+        min-height: 60vh;
+        background-color: lightgray;
+    }
+
 }
 
 .page-header{
