--- a/www/templates/estore_a/initial.html
+++ b/www/templates/estore_a/initial.html
@@ -6,7 +6,7 @@
 
         </div>
 
-        <div class="col-sm-8">
+        <div class="col-sm-8" id='content-col'>
 
             <div class="row third-percent-min">
                 <div class="col-sm-12" id='special-offers'>
