--- a/less/mockups_a/todo_list.less
+++ b/less/mockups_a/todo_list.less
@@ -4,21 +4,37 @@
 }
 
 .todo-list-entry{
-    min-height: 10vh;
+    min-height: 8vh;
     height: 1px;
     word-break: break-all;
     border: 3px solid black !important;
     margin-bottom: 10px;
 
-    .col-sm-9{
+    .col-sm-1,.col-sm-10{
         padding: 5px;
         border-right: 3px solid black;
         height: 100%;
     }
 
-    .col-sm-3{
-        padding: 5px;
-        height: 100%;
+    .col-sm-1{
+        vertical-align: middle;
+        text-align: center;
+    }
+
+    .col-sm-1 .chkbox{
+        margin-top: 10px;
+        vertical-align: middle;
+        text-align: center;
+        -moz-transform: scale(2);  
+        -webkit-transform: scale(2);  
+        -o-transform: scale(2);  
+    }
+    .col-sm-1 img{
+        height: 90%;
+    }
+
+    .checked{
+        text-decoration: line-through;
     }
 }
 /******************************************************************************/
